# openstudio-backporter

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
installation/: index.html
openstudiobackporter/: __init__.py  backport_3_10_0_to_3_9_0.py  backport_3_11_0_to_3_10_0.py  backport_3_9_0_to_3_8_0.py  backporter.py  helpers.py  main.py
search/: search_index.json
tests/: __init__.py  helpers.py  test_3_10_0_to_3_9_0.py  test_3_11_0_to_3_10_0.py  test_3_9_0_to_3_8_0.py  test_main.py  test_openstudiobackporter.py
usage/: index.html
