[tool]
[tool.poetry]
name = "openstudio-backporter"
version = "3.10.0"
homepage = "https://github.com/jmarrec/openstudio-backporter"
description = "A small library to backport an OpenStudio OSM model to an older version."
authors = ["Julien Marrec <contact@effibem.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "openstudio-backporter" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

openstudio = { version= "3.10.0", allow-prereleases = true }


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
tox = "^4.27.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-include-markdown-plugin = "^7.1.6"
mkdocs-material = "^9.6.15"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.12"
mkdocs-autorefs = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
virtualenv = "^20.31.2"
pip = "^25.1.1"
twine = "^6.1.0"
toml = "^0.10.2"
bump2version = "^1.0.1"
mypy = "^1.16.1"
flake8 = "^7.3.0"
flake8-docstrings = "^1.7.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
